--- a/.github/ISSUE_TEMPLATE/1-new-entry.yml
+++ b/.github/ISSUE_TEMPLATE/1-new-entry.yml
@@ -14,19 +14,12 @@ body:
       placeholder: "example: cochlea"
     validations:
       required: true
-  - type: input
-    attributes:
-      label: Forms
-      description: "What are the forms for the new entry?"
-      placeholder: "example: -ae"
-    validations:
-      required: false
   - type: dropdown
     attributes:
       label: Word class
       description: "What is the word class or part-of-speech of the new entry?"
       options:
-        - n/a (for quotes, compound noun, etc.)
+        - n/a (for phrases, etc.)
         - adj. (adjective)
         - adv. (adverb)
         - conj. (conjunction)
@@ -41,57 +34,22 @@ body:
       required: true
   - type: input
     attributes:
-      label: Variants
-      description: "What are the variants, if any?"
-      placeholder: "example: coclea"
+      label: English Translations
+      description: "What are the English translations for the new entry?"
+      placeholder: "example: snail"
     validations:
       required: false
   - type: input
     attributes:
-      label: Notes
-      description: "What are additional information, like grammar details or usage, for the new entry?"
-      placeholder: "example: acc. sg. -im"
+      label: German Translations
+      description: "What are the German translations for the new entry?"
+      placeholder: "example: Schnecke"
     validations:
       required: false
   - type: input
-    attributes:
-      label: Etymology
-      description: "What is the etymology?"
-      placeholder: "example: < gr. κοχλίας"
-    validations:
-      required: false
-  - type: textarea
-    attributes:
-      label: Translations
-      description: "What are the translations for the new entry?"
-      placeholder: "example: snail        Schnecke"
-  - type: input
-    attributes:
-      label: Derivatives
-      description: "What are the derivatives, if any?"
-      placeholder: "example: cochleatus, cochleola"
-    validations:
-      required: false
-  - type: dropdown
     attributes:
       label: References
       description: "What are the references for the new entry?"
-      multiple: true
-      options:
-        - Blaise
-        - Chevin
-        - DMLBS
-        - Du Cange
-        - Gaffiot
-        - DMNES
-        - Georges
-        - Lewis&Short
-        - LLN
-        - LML
-        - Niermeyer
-        - OLD
-        - Orbis latinus
-        - PONS
-        - PECS
-        - Stowasser
-        - Vicipaedia
+      placeholder: "example: Lewis&Short"
+    validations:
+      required: false
